gitops/platform/databases/postgres/service.yml
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres-service
# spec:
#   type: ClusterIP
#   selector:
#     app: postgres
#   ports:
#     - port: 5432
#       targetPort: 5432

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 32543
  selector:
    app: postgres
